--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,8 @@
 #Trim some cruft that builds up during chef runs
 chef-repo/chef-stacktrace.out
 chef-repo/*.bin
-chef-repo/*.tar.gz
+chef-repo/*.tar.*
 chef-repo/*.tgz
+
+
+chef-repo/Python-2.7.2/
