fixes to epel release as well as working around a super annoying bug in remote file

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ chef-repo/Python-2.7.2/
 #Ignore my eclipse project related files
 .buildpath
 .project
+
+#.vagrant appears to be a transient file
+.vagrant
